# clang-format-generator

./: .clang-format  CMakeLists.txt  README.md  build_asan.sh  build_coverage.sh  build_gprof.sh  build_ubsan.sh
.github/workflows/: build.yml
examples/: style_a  style_a.cpp  style_b  style_b.cpp  style_c  style_c.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp  result.h  run.cpp  run.h  run.test.cpp
src/lib/: CMakeLists.txt  clang_format_lib.h  generate_reference_file.cpp  parse_line.cpp  version.cpp  write_clang_format_file.cpp
src/test/: CMakeLists.txt  test.cpp
src/test_framework/: CMakeLists.txt  test_framework.h
src/test_resources/: output_170  ref.cpp
